--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.4",
-    "redux-saga": "^1.2.1"
+    "redux-saga": "^1.2.1",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
